# llm-from-scratch

./: .dockerignore  .gitignore  CLAUDE.md  README.md  RUST_MIGRATION_SUMMARY.md  main.py  pyproject.toml  ts_valid_tokenizer.json
.cursor/rules/: cli-tests.mdc  public-api-cli.mdc  py-filename-lowercase-underscore.mdc
cli/: __init__.py
cli-tests/: conftest.py
cli-tests/bpe_tokenizer/: test_bpe_tokenizer_cli.py  test_train_bpe_cli.py  test_train_bpe_flamegraph_cli.py
cli-tests/sandbox/: test_sandbox_runner_cli.py
cli/bpe_tokenizer/: bpe_tokenizer_cli.py  train_bpe_cli.py
cli/sandbox/: sandbox_runner_cli.py
docker/: .gitignore  Dockerfile.sandbox  OPTIMIZATION.md  build.sh
docs/: evaluation.md
docs/cli/: bpe_tokenizer.md  index.md  sandbox_runner.md
docs/modules/: IMPLEMENTATION_SUMMARY.md  bpe_merge_optimization.md  bpe_tokenizers.md  sandbox_runner.md  transformer_architecture.md
evaluation/bpe-tokenizer/: bpe_trainer_tinystories.sh  bpe_trainer_tinystories_500M.sh  bpe_trainer_tinystories_50M.sh  test_inverted_index.sh
libs/bpe_core/: Cargo.toml  README.md  build.sh  pyproject.toml
libs/bpe_core/src/: io.rs  lib.rs  merge_optimizer.rs  pair_counter.rs  pretokenizer.rs  trainer.rs
llm_from_scratch.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
llm_from_scratch/bpe_tokenizer/: _gpt2_bytes.py  _pat.py  tokenizer.py  train_bpe.py
monitoring/: README.md  docker-compose.yml  prometheus.yml
runs/058e17a6-3cbe-4cda-9f8e-901a648c96bb/: docker_commands.txt
runs/3850af67-aae3-4c7d-902f-97318d9f1681/: docker_commands.txt
runs/b9370fba-4874-431b-addb-f680e24ee337/: docker_commands.txt
runs/cf2bff2f-3868-4794-83fa-6016d4bf0244/: docker_commands.txt
runs/de99363d-6782-407f-8160-6cb157af9b7f/: docker_commands.txt
runs/ef8f3466-aa10-4dc7-8a4f-0ee8a757eafc/: docker_commands.txt
src/: _logging.py
tests/: adapters.py  conftest.py  test_merge_optimizer.py  test_rust_bpe_core.py  test_train_bpe.py
tokenizer/: bpe_test_eval_optimized.json  token_ids_v1.json
(+32 files in other folders)
