[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-from-scratch"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "regex>=2023.0",
    "torch>=2.10.0",
]

[tool.setuptools.package-dir]
"llm_from_scratch" = "src"

[tool.setuptools]
packages = ["llm_from_scratch", "llm_from_scratch.bpe_tokenizer"]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "tiktoken>=0.5",
    "numpy>=1.24",
    "torch>=2.0",
    "einops>=0.7",
    "jaxtyping>=0.2",
    "psutil>=5.9",
]
