[package]
name = "bpe_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "bpe_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
rustc-hash = "2.0"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
